# symbios-overlands

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
assets/: client-metadata.json
assets/fonts/: README.md
assets/shaders/: cloud.wgsl  splat.wgsl  water.wgsl
crates/gen-jobs/: Cargo.toml
crates/gen-jobs/src/: lib.rs
crates/gen-worker/: Cargo.toml
crates/gen-worker/src/: lib.rs  main.rs
docs/: architecture.md  building.md  diagnostics.md  lsystem-playbook.md  theme-overhaul-template.md
src/: alloc_track.rs  attract.rs  audio_materials.rs  audio_mute.rs  avatar.rs  boot_params.rs  camera.rs  clouds.rs  config.rs  editor_gizmo.rs  lib.rs  loading.rs  logout.rs  main.rs  network.rs  oauth.rs  offload.rs  pds.rs  player.rs  prefs.rs  protocol.rs  rover.rs  social.rs  splat.rs  state.rs  terrain.rs  urban.rs  water.rs  world_builder.rs
src/catalogue/: mod.rs
src/catalogue/items/: fx.rs  lighthouse.rs  lsys_branching.rs  lsys_koch_island.rs  lsys_monopodial_tree.rs  lsys_sierpinski.rs  lsys_sympodial_tree.rs  lsys_ternary_gravity.rs  lsys_ternary_props.rs  medieval_castle.rs  mod.rs  my_teleporter.rs  observatory.rs  ruined_temple.rs  shape_grammar_test.rs  stone_circle.rs  util.rs  villa.rs  watchtower.rs  ziggurat.rs
src/catalogue/items/alien_monolithic/: black_monolith.rs  broken_monolith.rs  dead_pylon.rs  energy_node.rs  floating_cube.rs  fx.rs  gateway.rs  glyph_arch.rs  glyph_rubble.rs  glyph_stone.rs  levitating_platform.rs  light_disc.rs  light_pylon.rs  mod.rs  monolith_shard.rs
src/catalogue/items/alien_organic/: biolume_stalk.rs  chitinous_hive.rs  creep_patch.rs  egg_sac.rs  fleshy_spire.rs  (+10 more)
src/diagnostics/: analyze.rs  bevy_bridge.rs  crash_log.rs  event.rs  log.rs  mod.rs  names.rs  panic.rs  plugin.rs  registry.rs  samplers.rs  sink.rs  snapshot.rs
src/diagnostics/analyze/: diff.rs  filters.rs  mod.rs  parse.rs  sections.rs  tests.rs
src/diagnostics/anomaly/: mod.rs  registry.rs  replay.rs  rule.rs  rules.rs  rules_ecs.rs  tick.rs
src/editor_gizmo/: commit.rs  context_menu.rs  drag.rs  highlight.rs  mod.rs  sync.rs
src/editor_gizmo/blob/: mod.rs  preview.rs  proxy.rs  wireframe.rs  write.rs
src/interaction/: audio.rs  audio_example.rs  classifier.rs  contact.rs  cooldown.rs  decal.rs  locomotion.rs  mod.rs  particle_channel.rs  perturbation.rs  plugin.rs  recipes.rs  stains.rs  water_channel.rs
src/loading/: ambient.rs  fetch.rs  mod.rs  records.rs
src/network/: broadcast.rs  chunk.rs  inbound.rs  lifecycle.rs  mod.rs  peer_cache.rs  smoother.rs
src/oauth/: auth_flow.rs  discovery.rs  mod.rs  native_server.rs  refresh.rs  service_token.rs  util.rs  wasm.rs
src/offload/: worker.rs
src/pds/: asset_reference.rs  audio.rs  avatar.rs  contact_effects.rs  generator.rs  inventory.rs  material_finish.rs  mod.rs  prim.rs  record_size.rs  room.rs  ruin.rs  sanitize.rs  serde_util.rs  terrain.rs  texture.rs  types.rs  xrpc.rs
src/pds/avatar/: gait.rs  mod.rs
src/pds/sanitize/: audio.rs  common.rs  contact_effects.rs  limits.rs  material.rs  mod.rs  particles.rs  primitive.rs  sign.rs  terrain.rs  transform.rs  water.rs
src/player/: airplane.rs  car.rs  gait.rs  helicopter.rs  hotswap.rs  hover_boat.rs  humanoid.rs  mod.rs  portal.rs  preset.rs  respawn.rs  rover.rs  spawn.rs  visuals.rs
src/render_tool/: headless.rs  mod.rs  text_tools.rs
src/seeded_defaults/: band.rs  hash.rs  mod.rs  oklch.rs  scene.rs
src/seeded_defaults/avatar/: airship.rs  blueprint.rs  body.rs  character.rs  chassis.rs  face.rs  fx.rs  gait.rs  humanoid_style.rs  materials.rs  mod.rs  outfit.rs  palette.rs  skiff.rs  vehicle_blueprint.rs  vessel.rs
src/seeded_defaults/room/: accent.rs  atmosphere.rs  audio.rs  exotic.rs  gateway.rs  groundcover.rs  landmark.rs  mod.rs  palette.rs  particles.rs  rocks.rs  scatters.rs  settlement.rs  siting.rs  terrain.rs  textures.rs
src/terrain/: heightmap.rs  lifecycle.rs  lots.rs  mod.rs  referenced.rs  roads.rs  splat.rs
src/ui/: affordances.rs  airship.rs  avatar.rs  catalogue.rs  chat.rs  confirm.rs  diagnostics.rs  editable.rs  fonts.rs  gateway.rs  inventory.rs  layout.rs  loading.rs  login.rs  mod.rs  people.rs  physics.rs  room.rs  settings.rs  shortcuts.rs  theme.rs  toast.rs  toolbar.rs  travel.rs  unsaved_guard.rs
src/ui/avatar/: mod.rs
src/ui/inventory/: drop.rs  mod.rs
src/ui/login/: begin.rs  complete.rs  errors.rs  mod.rs  native_callback.rs  posts.rs  validation.rs  wasm_resume.rs
src/ui/room/: audio.rs  construct.rs  contact_effects.rs  environment.rs  generators.rs  lsystem.rs  material.rs  mod.rs  placements.rs  publish.rs  raw.rs  shape.rs  terrain.rs  widgets.rs
src/ui/undo/: mod.rs  restore.rs  trigger.rs
src/urban/: chains.rs  diagnostics.rs  graph.rs  hubs.rs  levelling.rs  math.rs  mod.rs  ribbon.rs  test_support.rs  truncation.rs
src/urban/chains/: tests.rs
src/urban/diagnostics/: tests.rs
src/urban/graph/: tests.rs
src/urban/hubs/: tests.rs
src/urban/levelling/: tests.rs
src/urban/ribbon/: tests.rs
src/urban/truncation/: tests.rs
src/world_builder/: audio_resolver.rs  avatar_spawn.rs  blob_fetch.rs  compile.rs  gateway.rs  generator_cache.rs  grammar_diag.rs  image_cache.rs  lsystem.rs  material.rs  mod.rs  particles.rs  portal.rs  prim.rs  prim_cache.rs  shape.rs  sign.rs  spatial_audio.rs  surface_bake.rs
src/world_builder/compile/: census.rs  contact_recipes.rs  dispatch.rs  environment.rs  executor.rs  job.rs  mod.rs  scatter.rs  slope.rs  spawn_ctx.rs  water.rs
src/world_builder/particles/: atlas.rs  mod.rs  ramp.rs  spawn.rs  tick.rs
src/world_builder/prim/: base.rs  blob.rs  colliders.rs  cuts.rs  mod.rs  prisms.rs  shapes.rs  superellipsoid.rs  sweeps.rs  torture.rs  uv.rs
tests/: ambient_recipe.rs  asset_reference.rs  audio_config.rs  avatar_record.rs  biome_filter.rs  fixed_point.rs  freeze_rigid_body.rs  inventory_record.rs  misc.rs  oauth_flow.rs  open_union_unknown.rs  particle_generator.rs  pds_records.rs  pds_sanitize.rs  sign_generator.rs  texture_referenced.rs
(+415 files in other folders)
