[package]
name = "symbios-overlands"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
egui_ltreeview = "0.6.1"
bevy_panorbit_camera = { version = "0.34", features = ["bevy_egui"] }
bevy_symbios = { path = "../bevy_symbios" }
bevy_symbios_ground = { path = "../bevy_symbios_ground", features = [
    "physics",
] }
bevy_symbios_multiuser = { path = "../bevy_symbios_multiuser" }
bevy_symbios_texture = { path = "../bevy_symbios_texture", features = ["egui"] }
transform-gizmo-bevy = "0.9"
symbios = { path = "../symbios" }
symbios-turtle-3d = { path = "../symbios-turtle-3d" }
symbios-shape = { path = "../symbios-shape" }
bevy_symbios_shape = { path = "../bevy_symbios_shape" }
avian3d = "0.6"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
futures-lite = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
rand_chacha = "0.9"
proto-blue-oauth = "0.2"
proto-blue-api = "0.2"
url = "2"

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
webbrowser = "1.0"
arboard = "3"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.82", features = [
    "Document",
    "Window",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlBodyElement",
    "Node",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "Clipboard",
    "ClipboardEvent",
    "Navigator",
    "Storage",
    "Location",
    "History",
] }
wasm-bindgen = "0.2.120"
js-sys = "0.3.82"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
#opt-level = "s"   # Optimize for size (helps wasm-bindgen)
#lto = "fat"       # Enable full Link Time Optimization (CRITICAL FIX)
#codegen-units = 1 # Reduce parallelism to improve optimization quality
#strip = true      # Strip symbols to clean up the binary tables
#panic = "abort"   # Reduce binary size by removing stack unwinding
