[package]
name = "symbios-overlands"
version = "0.4.0"
edition = "2024"

# The app is the workspace root; `crates/*` hold the compute-offload crates
# shared with the wasm Web Worker (see crates/gen-jobs). Keeping them in one
# workspace gives a shared lockfile, target dir, and feature unification.
[workspace]
members = ["crates/gen-jobs", "crates/gen-worker"]

[features]
# Native allocation tracer (#811): wraps the global allocator and prints a
# backtrace for every allocation >= 16 MiB, so the per-frame giant-buffer
# churn measured on wasm can be attributed by name. Diagnostic-only — run
# `cargo run --release --features alloc-trace`, play for a minute, read
# stderr. Off by default: zero cost in normal builds.
alloc-trace = []

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
egui_ltreeview = "0.6"
# No "bevy_egui" feature: its focus gate is all-or-nothing and privately
# scheduled, which made right-drag dead over GUI windows. `camera.rs` owns
# the equivalent gate with a right-button override instead (#702).
bevy_panorbit_camera = "0.34"
bevy_symbios = "0.4"
bevy_symbios_ground = { version = "0.3", features = ["physics"] }
bevy_symbios_multiuser = "0.6"
bevy_symbios_texture = { version = "0.6", features = ["egui"] }
bevy_symbios_audio = { version = "0.2", features = ["egui"] }
transform-gizmo-bevy = "0.9"
symbios = "1.5"
symbios-turtle-3d = "0.5"
symbios-shape = "0.2"
bevy_symbios_shape = "0.2"
symbios-tensor = "0.2"
gen-jobs = { path = "crates/gen-jobs" }
avian3d = "0.6"
fast-surface-nets = "0.2"
ndshape = "0.3"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
futures-lite = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
# Compact binary codec for the P2P reliable-message chunker (#716). Pinned to
# 1.3 to match the encoding `bevy_symbios_multiuser` already uses on the wire,
# so a chunked payload's measured size equals its true transmitted size.
bincode = "1.3"
rand_chacha = "0.9"
proto-blue-oauth = "0.2"
proto-blue-api = "0.2"
url = "2"

[dev-dependencies]
# Matches symbios-tensor's glam (0.30.10) so tests can hand-build a RoadGraph
# with the same Vec2 type. Dev-only — never enters the production/wasm build.
glam = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
webbrowser = "1.0"
arboard = "3"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlBodyElement",
    "Node",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "Clipboard",
    "ClipboardEvent",
    "Navigator",
    "Storage",
    "Location",
    "History",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures-channel = "0.3"
# `gloo-worker` is a direct dep so the `Spawnable` trait is in scope to spawn
# the worker; the worker type + impl live in `gen-worker` (slim, no Bevy).
gloo-worker = "0.6"
gen-worker = { path = "crates/gen-worker" }

[profile.release]
opt-level = "s"   # Optimize for size (helps wasm-bindgen)
lto = "fat"       # Enable full Link Time Optimization (CRITICAL FIX)
codegen-units = 1 # Reduce parallelism to improve optimization quality
strip = true      # Strip symbols to clean up the binary tables
panic = "abort"   # Reduce binary size by removing stack unwinding
